# sekken

./: README.md  flake.nix
denops/sekken/: main.ts
denops/sekken/sekken-rs/: .gitignore  Cargo.toml  Makefile  flake.nix  requirements.txt  rust-toolchain.toml
denops/sekken/sekken-rs/cli/: Cargo.toml
denops/sekken/sekken-rs/cli/src/: main.rs
denops/sekken/sekken-rs/converter/: Cargo.toml
denops/sekken/sekken-rs/converter/src/: kana.rs  lib.rs
denops/sekken/sekken-rs/core/: Cargo.toml
denops/sekken/sekken-rs/core/src/: dictionary.rs  lib.rs  sekken.rs  util.rs  viterbi.rs
denops/sekken/sekken-rs/core/src/sekken/: lattice.rs  lattice2.rs
denops/sekken/sekken-rs/dict/: Cargo.toml
denops/sekken/sekken-rs/dict/src/: lib.rs
denops/sekken/sekken-rs/lattice/: Cargo.toml
denops/sekken/sekken-rs/lattice/src/: lib.rs
denops/sekken/sekken-rs/make-model/: Cargo.toml
denops/sekken/sekken-rs/make-model/src/: main.rs  wikijson.rs
denops/sekken/sekken-rs/make-training-data/: Cargo.toml
denops/sekken/sekken-rs/make-training-data/src/: main.rs
denops/sekken/sekken-rs/model/: Cargo.toml
denops/sekken/sekken-rs/model/src/: compact.capnp  compact.rs  compact_capnp.rs  hmm.capnp  hmm.rs  hmm_capnp.rs  lib.rs  normal.rs
denops/sekken/sekken-rs/segmenter/: Cargo.toml
denops/sekken/sekken-rs/segmenter/src/: lib.rs
denops/sekken/sekken-rs/wasm/: Cargo.toml
denops/sekken/sekken-rs/wasm/pkg/: sekken_wasm.d.ts  sekken_wasm.js  sekken_wasm_bg.wasm  sekken_wasm_bg.wasm.d.ts
denops/sekken/sekken-rs/wasm/src/: lib.rs
doc/: sekken.jax
