[package]
name = "sekken-make-model"
version = "0.1.0"
edition = "2021"

[dependencies]
bzip2 = "0.4.4"
utf8-read = "0.4.0"
sekken-model = { path = "../model", features = ["save"] }
sekken-core = { path = "../core" }
anyhow = "1.0.75"
ndarray = { version = "0.15.6", features = ["rayon"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
glob = "0.3.1"
